@@ -63,6 +63,7 @@
   <printer><id>printer/Epson-LP-9400</id></printer>
   <printer><id>printer/Epson-LP-9600</id></printer>
   <printer><id>printer/Epson-LP-9600S</id></printer>
+  <printer><id>printer/Epson-LP-S300</id></printer>
   <printer><id>printer/Epson-LP-S3000</id></printer>
   <printer><id>printer/Epson-LP-S4000</id></printer>
   <printer><id>printer/Epson-LP-S4500</id></printer>
@@ -77,6 +78,7 @@
   <printer><id>printer/Epson-LP-9200C</id></printer>
   <printer><id>printer/Epson-LP-9500C</id></printer>
   <printer><id>printer/Epson-LP-9800C</id></printer>
+  <printer><id>printer/Epson-LP-M6000</id></printer>
   <printer><id>printer/Epson-LP-S6500</id></printer>
  </printers>
 </driver>
