@@ -613,6 +613,11 @@
      </constraint>
      <constraint sense="false">
       <make>Epson</make>
+      <model>LP-M6000</model>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
       <model>LP-S4500</model>
       <arg_defval>na</arg_defval>
      </constraint>
