@@ -580,6 +580,10 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-AcuLaser_C1900</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -818,6 +822,10 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-8100</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -984,6 +992,14 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-M6000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-S3000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1107,6 +1123,14 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-M6000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-S3000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1222,6 +1246,14 @@
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-M6000</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
       <printer>printer/Epson-LP-S3000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
@@ -1334,6 +1366,14 @@
      </constraint>
      <constraint sense="false">
       <printer>printer/Epson-LP-9800C</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>na</arg_defval>
+     </constraint>
+     <constraint sense="false">
+      <printer>printer/Epson-LP-M6000</printer>
       <arg_defval>na</arg_defval>
      </constraint>
      <constraint sense="false">
