@@ -23,6 +23,11 @@
       <driver>eplaser-jp</driver>
       <arg_defval>0</arg_defval>
      </constraint>
+     <constraint sense="false">
+      <make>Epson</make>
+      <model>LP-M6000</model>
+      <arg_defval>0</arg_defval>
+     </constraint>
   </constraints>
   <arg_shortname_false>
    <en>RITOn</en><!-- Backends only know <en> shortnames! -->
