@@ -127,6 +127,16 @@
      </constraint>
      <constraint sense="true">
       <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S300</printer>
+      <arg_defval>ev/eplaser-jp-Model-lps300</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-M6000</printer>
+      <arg_defval>ev/eplaser-jp-Model-lpm6000</arg_defval>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S3000</printer>
       <arg_defval>ev/eplaser-jp-Model-lps3000</arg_defval>
      </constraint>
@@ -678,6 +688,50 @@
      <constraint sense="true">
       <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-9600S</printer>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/eplaser-jp-Model-lps300">
+    <ev_longname>
+     <en>Epson LP-S300</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>lps300</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>lp8700</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>eplaser-jp</driver>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S300</printer>
+     </constraint>
+    </constraints>
+   </enum_val>
+   <enum_val id="ev/eplaser-jp-Model-lpm6000">
+    <ev_longname>
+     <en>Epson LP-M6000</en>
+    </ev_longname>
+    <!-- A multilingual <comments> block can appear here, too;
+         it should be treated as documentation for the user. -->
+    <ev_shortname>
+     <en>lpm6000</en>
+     <!-- Until someone tells me how to learn the user locale in 
+          backends, the shortname must be monolingual in <en>! -->
+    </ev_shortname>
+    <ev_driverval>lp8500c</ev_driverval>
+    <constraints>
+     <constraint sense="false">
+      <driver>eplaser-jp</driver>
+     </constraint>
+     <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-M6000</printer>
      </constraint>
     </constraints>
    </enum_val>
