@@ -1,0 +1,34 @@
+<printer id="printer/Epson-LP-S300">
+  <make>Epson</make>
+  <model>LP-S300</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+    <consumables>
+      <comments>
+        <en>toner cartridge, drum cartridge</en>
+      </comments>
+    <!--one or more "partno" elements.--></consumables>
+  </mechanism>
+  <url>http://www.epson.jp/products/offirio/printer/</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <autodetect>
+  <!--no known parport probe information--></autodetect>
+  <functionality>A</functionality>
+  
+  <driver>eplaser-jp</driver>
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    Epson provides a free (LGPL) driver for this printer. With this
+    the printer should work to its full extent.&lt;p&gt;
+    </en>
+  </comments>
+</printer>
