@@ -1,3 +1,7 @@
+2008-07-10  AVASYS Corporation <pipsnews@avasys.jp>
+
+	* added the EPSON LP-S300 and EPSON LP-M6000.
+
 2008-06-29  Dafydd Crosby <dcrosby@userful.com>
 	* Added following printers:
 	Okidata B4545_MFP
